--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <h1 class="home_profession">Web developer</h1>
                             <!-- Button to generate and download the pdf. Available for mobile. -->
                             <div>
-                                <a href="./assets/resume/HarishmaResume.pdf" download="mobile-Resume.pdf"
+                                <a href="./assets/resume/HarishmaResume.pdf" download="HarishmaResume.pdf"
                                     class="home_download">Download</a>
                             </div>
                         </div>
