edited some mistakes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#certification" class="nav_link">
+                        <a href="#projects" class="nav_link">
                             <i class='bx bx-folder-open'></i>Projects
                         </a>
                     </li>
@@ -257,7 +257,7 @@
                 </section>
 
                 <!--========== CERTIFICATES ==========-->
-                <section class="certificate section_right" id="certificates">
+                <section class="certificate section_right" id="certification">
                     <h2 class="section_title">Certification</h2>
                     <div class="certificate_container bd-grid">
                         <div class="certificate_content">
