--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
                 </section>
                 <!--========== EXPERIENCE ==========-->
                 <section class="experience section_right" id="experience">
-                    <h2 class="section_title">Experience</h2>
+                    <h2 class="section_title">Experience<a href="./assets/resume/1795851_ServiceCertificate_1.pdf" target="_blank" class="link_icon"><i class='bx bx-link '></i></a> </h2>
                     <div class="experience_container bd-grid">
                         <div class="experience_content">
                             <h3 class="experience_title">ASSISTANT SYSTEM ENGINEER</h3>
-                            <h3 class="experience_company">Tata Consultancy Services (TCS)</h3>
-                            <p class="experience_years">From Feb 2021 to Sep 2022</p>
+                            <h3 class="experience_company">Tata Consultancy Services (TCS) - 1.7 years</h3>
+                            <p class="experience_years">From Feb 2021 to Sep 2022 </p>
                             <p class="experience_desc">Got trained and understand the whole working of an
                                 application named Reporting and Track & Trace. Handled the tickets raised by various
                                 client users having issues or need any changes in the application and provided the
@@ -258,7 +258,7 @@
 
                 <!--========== CERTIFICATES ==========-->
                 <section class="certificate section_right" id="certification">
-                    <h2 class="section_title">Certification</h2>
+                    <h2 class="section_title">Certification<a href="https://www.edureka.co/my-certificate/93244526051d413250a2eb0d0b1765e5" target="_blank" class="link_icon"><i class='bx bx-link '></i></a> </h2> 
                     <div class="certificate_container bd-grid">
                         <div class="certificate_content">
                             <h3 class="certificate_title">Full Stack Web Development</h3>
@@ -290,7 +290,7 @@
                                 <span class="project_line"></span>
                             </div>
                             <div class="project_data bd-grid">
-                                    <h3 class="project_title">My Portfolio</h3>
+                                    <h3 class="project_title">My Portfolio <a href="https://harishmars.github.io/My-Portfolio/" target="_blank" class="link_icon"><i class='bx bx-link '></i></a> </h3>
                                     <p class="project_desc">Created a responsive Portfolio page using HTMl, CSS,
                                         Bootstrap and JavaScript</p>
                                 
@@ -302,7 +302,7 @@
                                 <!-- <span class="project_line"></span> -->
                             </div>
                             <div class="project_data bd-grid">
-                                    <h3 class="project_title">Resume</h3>
+                                    <h3 class="project_title">Resume <a href="https://harishmars.github.io/My-Resume/#" target="_blank" class="link_icon"><i class='bx bx-link '></i></a> </h3>
                                     <p class="project_desc">Created a responsive resume using HTML, CSS and
                                         javaScript</p>
                             </div>
