--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- BOX icons  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- FontAwesome icons  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- StyleSheet  -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Harishma Resume</title>
@@ -316,19 +318,23 @@
                     <h2 class="section_title">Interests</h2>
                     <div class="interests_container bd-grid">
                         <div class="interests_content">
+                            <i class="fa-solid fa-shirt"></i>
+                            <span class="interests_name"> Stitching</span>
+                        </div>
+                        <div class="interests_content">
                             <i class='bx bx-headphone interests_icon'></i>
                             <span class="interests_name"> Music</span>
                         </div>
-
-                        <div class="interests_content">
-                            <i class='bx bxs-cricket-ball'></i>
-                            <span class="interests_name"> Watching cricket</span>
-                        </div>
-
                         <div class="interests_content">
                             <i class='bx bx-game'></i>
                             <span class="interests_name"> Sudoku</span>
                         </div>
+                        <div class="interests_content">
+                            <i class='bx bxs-cricket-ball'></i>
+                            <span class="interests_name" >Watching cricket</span>
+                        </div>
+
+                        
                     </div>
             </div>
             </section>
