--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <div class="project_content">
                             <div class="project_time">
                                 <span class="project_rounder"></span>
-                                <!-- <span class="project_line"></span> -->
+                                <span class="project_line"></span>
                             </div>
                             <div class="project_data bd-grid">
                                     <h3 class="project_title">Resume <a href="https://harishmars.github.io/My-Resume/#" target="_blank" class="link_icon"><i class='bx bx-link '></i></a> </h3>
@@ -309,8 +309,18 @@
                                         javaScript</p>
                             </div>
                         </div>
+                        <div class="project_content">
+                            <div class="project_time">
+                                <span class="project_rounder"></span>
+                                <!-- <span class="project_line"></span> -->
+                            </div>
+                            <div class="project_data bd-grid">
+                                <h3 class="project_title">Fuel Cost Calculator <a href="https://harishmars.github.io/Fuel-cost-Calculator/" target="_blank" class="link_icon"><i class='bx bx-link '></i></a> </h3>
+                                <p class="project_desc">Created a Fuel Cost Calculator using HTML, CSS, JavaScript</p>
+                        </div>
+                        </div>
                     </div>
-
+                    
                 </section>
 
                 <!--========== INTERESTS ==========-->
